fix: Adjust the content so it doesn't overflow the div

--- a/src/client/styles/_sectionResults.scss
+++ b/src/client/styles/_sectionResults.scss
@@ -22,8 +22,6 @@
 .info-holder {
     padding: 10px;
     width: 100%;
-    display: grid;
-    grid-template-columns: 100%;
     row-gap: 10px;
 }
 
